# quant-trading-gym

./: .dockerignore  .gitignore  6.1_full_features.md  6.2_full_ensemble.md  6.5_pyo3_bindings.md  Cargo.toml  README.md  architecture_slides.md  development_log.md  docker-compose.dev.yaml  docker-compose.frontend.yaml  docker-compose.tui.yaml  docker-compose.yaml  project_plan_initial.md  project_plan_vertical.md  qtg.py  requirements.txt  run_profiling.ps1  shap_feature_engineering.md  v7.1.md
crates/agents/: Cargo.toml
crates/agents/src/: borrow_ledger.rs  context.rs  lib.rs  ml_cache.rs  position_limits.rs  state.rs  tiers.rs  traits.rs
crates/agents/src/tier1/: mod.rs
crates/agents/src/tier1/ml/: canonical_features.rs  decision_tree.rs  ensemble_model.rs  feature_extractor.rs  full_features.rs  gaussian_nb.rs  gradient_boosted.rs  group_extractors.rs  linear_predictor.rs  ml_agent.rs  mod.rs  model_registry.rs  random_forest.rs
crates/agents/src/tier1/strategies/: bollinger_reversion.rs  macd_crossover.rs  market_maker.rs  mod.rs  momentum.rs  noise_trader.rs  pairs_trading.rs  trend_follower.rs  vwap_executor.rs
crates/agents/src/tier2/: agent.rs  context.rs  mod.rs  portfolio.rs  sector_rotator.rs  strategies.rs  wake_index.rs
crates/agents/src/tier3/: accounting.rs  config.rs  distributions.rs  mod.rs  pool.rs
crates/news/: Cargo.toml
crates/news/src/: config.rs  events.rs  fundamentals.rs  generator.rs  lib.rs  sectors.rs
crates/parallel/: Cargo.toml
crates/parallel/src/: lib.rs
crates/quant/: Cargo.toml
crates/quant/src/: engine.rs  lib.rs  risk.rs  rolling.rs  stats.rs  tracker.rs
crates/quant/src/indicators/: atr.rs  bollinger.rs  ema.rs  macd.rs  mod.rs  rsi.rs  sma.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  bridge.rs  error.rs  hooks.rs  lib.rs  state.rs
crates/server/src/routes/: api.rs  data.rs  health.rs  mod.rs  ws.rs
crates/sim-core/: Cargo.toml
crates/sim-core/src/: batch_auction.rs  error.rs  lib.rs  market.rs  order_book.rs  slippage.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: config.rs  hooks.rs  lib.rs  metrics.rs  runner.rs  sim_config.rs
crates/simulation/src/agent_factory/: background_pool.rs  ml_agents.rs  mod.rs  tier1.rs  tier2.rs
crates/simulation/src/subsystems/: agents.rs  auction.rs  market_data.rs  mod.rs  news.rs  risk.rs
crates/simulation/src/traits/: agents.rs  auction.rs  fundamentals.rs  market_data.rs  mod.rs  risk.rs
crates/simulation/tests/: agent_strategies.rs
crates/storage/: Cargo.toml
crates/storage/src/: candles.rs  comprehensive_features.rs  hook.rs  lib.rs  parquet_writer.rs  price_history.rs  recording_hook.rs  schema.rs  tests.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  lib.rs
crates/tui/src/widgets/: agent_table.rs  book_depth.rs  mod.rs  price_chart.rs  risk_panel.rs  stats_panel.rs  update.rs
crates/types/: Cargo.toml
crates/types/src/: config.rs  features.rs  ids.rs  indicators.rs  lib.rs  market_data.rs  money.rs  order.rs  trade.rs
dockerfile/frontend/: Dockerfile  nginx.frontend.conf
dockerfile/server/: Dockerfile
dockerfile/simulation/: Dockerfile
dockerfile/tui/: Dockerfile
docs/: executive_summary.md  technical_summary.md
frontend/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.integration.config.mjs
frontend/src/: App.tsx  api.integration.test.ts  index.css  websocket.integration.test.ts
frontend/src/api/: index.ts  presets.ts
frontend/src/components/: ErrorBoundary.tsx  index.ts
frontend/src/components/config/: ConfigSections.tsx  SymbolsEditor.tsx  index.ts
frontend/src/components/dashboard/: AgentTable.tsx  FactorGauges.tsx  IndicatorPanel.tsx  NewsFeed.tsx  OrderDepthChart.tsx  PriceChart.tsx  RiskPanel.tsx  SymbolSelector.tsx  TimeControls.tsx  index.ts
frontend/src/components/ui/: Accordion.tsx  Button.tsx  Input.tsx  index.ts
frontend/src/config/: defaults.ts
frontend/src/hooks/: index.ts  useDataService.ts  useWebSocket.ts
frontend/src/pages/: ConfigPage.tsx  LandingPage.tsx  SimulationPage.tsx  index.ts
frontend/src/types/: api.ts  config.ts  index.ts
models/: deep_decision_tree.json  ensemble_config.yaml  medium_decision_tree.json
python/training/: __init__.py  analyze_shap.py  check_parquet.py  common.py  config.yaml  feature_engineering.py  feature_schema.py  feature_selection.py  train_linear.py  train_models.py  train_naive_bayes.py  train_svm.py  train_trees.py
scripts/: scripts
src/: config.rs  lib.rs  main.rs
