[package]
name = "parallel"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Declarative parallel/sequential execution utilities"

[features]
default = []
parallel = ["rayon"]

[dependencies]
rayon = { workspace = true, optional = true }
parking_lot.workspace = true
