[package]
name = "types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core types for the quant-trading-gym simulation"

[dependencies]
serde.workspace = true
serde_json.workspace = true
derive_more = { version = "2", features = ["add", "not", "add_assign", "sum", "from", "into"] }
